handle overflows correctly, fixed positioning on top bar

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -63,9 +63,7 @@ span.tooltip.fade.in { opacity: 1; }
 	overflow: hidden;
 }
 
-div.container {
-	height: 100%;
-}
+
 
 div.cardflipper {
 	margin-top: 2em;
@@ -459,7 +457,7 @@ div.pockets { z-index: 2; }
  }
 
 
-div.inner-wrap { min-height: inherit; padding: 0;}
+div.inner-wrap { min-height: inherit; padding: 0; }
 
 li#mainpocket a {
 	padding: 0.3rem 0;
@@ -514,6 +512,13 @@ div.tri {
 	 padding: 0;
 	 opacity: 1;
   }
+
+	section.main-section,
+	div.container {
+		height: 100%;
+	}
+
+	div.scrolldiv { overflow-y: scroll; }
 
 	nav.tab-bar { overflow: hidden; }
 
